src/components/App.css
/* ... */
.nav #back h2 span { overflow: hidden; text-overflow: ellipsis; max-width:calc(60vw - 70px); display:inline-block;} 

#etext-nav > div,
.nav > div { width:1222px; display:flex;justify-content: space-between;align-items:center; }
/* .nav > div > a > img { height:50px; } */

.nav > div > div > a > img { vertical-align: middle;}

.nav #logo { display:flex; align-items:center;}

.nav #logo a { display: inline-block; margin-right:20px; }
.nav #logo a:last-child span,
.nav #logo a:first-child span { font-size:24px; line-height:26px; font-weight:500;}

.nav a { text-decoration: none; font-size:0; display:inline-block; }

.nav a#about,
.nav a > span,
.nav #donate, 
.nav #login { font-weight:700; font-size:14px;letter-spacing: 0.29px; text-transform: uppercase; text-decoration: none; }


.nav a#about { color: hsl(206, 24%, 13%);}

#login { top:0;right:0;z-index:1; display:inline-block; margin-left:auto;  color:#d73449; }
#login button {color:rgba(0,0,0,0.54); }

.nav #logo + a { margin-left:70px; margin-right:70px; }
/* .nav #about  { margin-left:105px; margin-right:105px;  } */

.nav a > span { color:#192229; display:inline-block;   }

#login span { display:inline-block; margin-left:20px; cursor:pointer; }

.nav #donate { width:150px;height:50px;border-radius: 2px; color:white;background-color: #d73449; line-height:50px; 
   text-align:center; display:inline-block;  margin-left:35px; }
.nav #donate img { vertical-align: middle; display: inline-block; margin-right:10px;}

.nav #lang { cursor:pointer; margin-top:7px; margin-left:50px; display: inline-block;}
.nav #lang img { display: inline-block;  } 

/* .resource .title + .data + .data .browse { display:none; } */
.nav .history { margin-left:35px; display:flex;}
.nav .history span { background-color:#efedee; width:40px;height:40px;border-radius:20px; display:inline-flex;justify-content: center;margin-left:15px;
   padding-left:2px; box-sizing: border-box; 
}
.nav .history span img { opacity:0.5; }


/* ---------------------------------------------------------------------------------------------------------------------- "sidepanes" */


.SidePane > div { padding-bottom:50px; }
.SidePane > div > ul { align-items: center; }
.SidePane > .close { position:absolute; top:-6px;right:-6px;}
.SidePane > .hide { position:absolute; top:-6px;left:-6px;}
.SidePane > #annoCollec { position:absolute; top:-6px;left:40px;}
.SidePane > #annoCollec svg.score0 { border-radius:50%; background-color:rgba(255, 205, 3, 0.4);border:1px dashed rgba(167, 134, 1, 0.4);}
.SidePane > #annoCollec svg.score1 { border-radius:50%; background-color:rgba(17, 173, 17, 0.3);border:1px solid rgba(36, 106, 36, 0.4);}

.SidePane { position:absolute;transition:left 400ms ease-in-out,right 400ms ease-in-out; background:white;min-height:calc(100vh - 40px); position:fixed;padding:20px;
   background:rgba(246,246,246,0.935); z-index:100000; top:0;  }
/* .SidePane.left {  box-shadow:2px 0 2px 0px rgba(0,0,0,0.35); }  */
.visible .SidePane.left { overflow-y:auto;}
.SidePane.right { right:-500px; box-shadow:-2px 0 2px 0px rgba(0,0,0,0.35);}
.SidePane.right.visible { right:0; /*overflow-y:auto; */ }
/* .SidePane > div { position:fixed } */
.SidePane .loader { position:absolute !important;margin-right:9px;margin-top:18px;right:0;}
.datatypesLoader, .facetLoader { left:0px !important;top:-10px !important;}

.App > :first-child { position:relative; z-index:10000; transition:left 400ms ease-in-out;}
/* .App > :not(.visible):first-child { left:-500px; } */
.App > :not(.visible):first-child #resizableLeftPane { position:absolute;  } 
.App > .visible:first-child { left:0; }
.App > .visible:first-child #resizableLeftPane { position:fixed; } 
/* .App > .visible:first-child + .SearchPane { margin-left:0; } */

#resizableLeftPane .SidePane { position:relative; overflow-x:hidden;} 

.react-resizable-handle {
   position: absolute;
   width: 15px;
   height: 100%;
   bottom: 0;
   right: -10px;
   box-sizing: border-box;
   cursor: e-resize;
   z-index:101;
 }
 
.SearchPane:not(.resultPage) .SidePane.left { display:none; }

.SidePane.left { position:relative; display:inline-block; width:230px;min-width:230px;  padding:0 35px 35px 35px;box-sizing: content-box; background:#efefef;}

.SidePane.left .sidebar-title { color: rgba(17, 19, 18, 0.9); font-weight:800; font-size:18px; text-align:left; margin-bottom:20px; 
   /* font-family:"Noto Sans"; */
}

.SidePane.left .widget-header {display:flex;justify-content:space-between;padding:0;border-bottom:1px solid #c1c1c1; cursor:pointer;}
.SidePane.left .widget-header svg { font-size:18px; }

.SidePane.left .widget-title { color: #4a4a4a; font-weight:700;font-size:10px;text-transform: uppercase; /*font-family:"Noto Sans";*/ }

.SidePane.left .collapse { padding:5px 0 0 15px; transition:none;}

/* TODO fix left column width under ~1440px
@media(max-width:calc(920px + 130px + 40px + 300px)) {
   .SidePane.left { padding-left:0 };
}
*/

/* ----------------------------------------------------------------------------------------------------------------------- samples/results */

#results,
#samples { width: 960px; margin-right:40px; /*margin: auto;*/ text-align: left; z-index: 0; padding:30px;background:white; display:block;
   padding-left:16px; padding-right:16px; padding-bottom:140px; max-width:100%;box-shadow: 0 2px 10px #e2e2e2; box-sizing:border-box;
}
#samples { padding: 20px 0 40px 0 ; width:910px;margin-right:0px; /*padding-left:37px; */}
#samples h3 { text-transform: uppercase; text-align: center; font-size:23px;margin:10px 0;}

#res-container > ul li { padding-left:0; pointer-events:none; }
#res-container > ul h4 { padding-left:22px;; }
#res-container > ul h4 { color:#343434; font-size:24px; /*font-family:"Noto Sans";*/ font-weight:900; text-transform:uppercase;}

#res-container #samples > h4 { padding-left:0; font-size:18px; text-transform: none;  font-weight:500; text-align:center; }
/* ... */

